--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="description" content="PixelPortal - Play curated HTML5 games." />
     <title>PixelPortal</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🎮</text></svg>">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700;800&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
